[package]
name = "cidr_matcher"
version = "0.1.0"
authors = ["DuckVador <Lx3JQkmzRS@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
pb = []
bs-matcher = ["pb"]

[dependencies]
deepsize ="0.2.0"
protobuf = { version = "2.18.0", features = ["with-bytes"] }

[[bench]]
name = "lpc_benchmark"
harness = false
required-features = ["bs-matcher"]

[dev-dependencies]
criterion = "0.3"
radix_trie = "0.2"

[build-dependencies]
protoc-rust = "2.22.1"

# [dev-dependencies]
[profile.release]
debug = true

[profile.bench]
debug = true
